ForgotPasswordConfirmation Email and Succelful Password change Complete! Stopping point: https://www.youtube.com/watch?v=Kaseth2ppMk&list=PL82C6-O4XrHccS2fD8tdEF9UoO3VwKeGK&index=6

--- a/ASP.NET Core MVC Identity.NET6/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,1 +1,2 @@
-﻿<h1>Forgot Yo password!</h1>
+﻿<h1>Email has been sent!</h1>
+<h1>Make sure to check your <span class="text-danger">Spam Box</span>  and ignore any potential "spam/virus" warnings.</h1>
