UserController created, stopping point: https://www.youtube.com/watch?v=NRInHhtuXhg&list=PL82C6-O4XrHccS2fD8tdEF9UoO3VwKeGK&index=9

--- a/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
@@ -10,12 +10,12 @@
 
 @if(User.Identity.IsAuthenticated)
 {
-    @if (!User.IsInRole("Admin"))
+    @if (User.IsInRole("admin"))
     {
-        <h3>Welcome Standard!</h3>
+        <h3>Welcome Admin!</h3>
     }
     else
     {
-        <h3>Welcome Admin!</h3>
+        <h3>Welcome Standard!</h3>
     }
 }
