locked down controllers and hid links in _Layout

--- a/ASP.NET Core MVC Identity.NET6/Views/Home/Error.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Home/Error.cshtml
@@ -5,10 +5,10 @@
 
 <style>
 	.body{
-		background-color: darkblue;
+		background-color: darkred;
 	}
 </style>
 
 <div class="body">
-	<h1>NOT FOUND!!!</h1>
+	<h1 class="display-4">403: { Forbidden }</h1>
 </div>
