added three.js for 3D environment

--- a/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@{
+﻿@*
+    DEFAULT TEMPLATE FOR ASP.NET CORE MVC
+*@
+@*@{
     ViewData["Title"] = "Home Page";
 }
 
@@ -18,4 +21,58 @@
     {
         <h3>Welcome!</h3>
     }
-}
+}*@
+
+
+
+@*
+    THREE.JS PLAYGROUND
+*@
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>3D Scene</title>
+    <style>
+        body {
+            max-width: 100vw;
+            max-height: 100vh;
+            margin: 0;
+        }
+    </style>
+</head>
+<body>
+    <script src="~/Three_js/three.js"></script>
+    <script>
+        const scene = new THREE.Scene();
+        const camera = new THREE.PerspectiveCamera(
+            75,
+            window.innerWidth / window.innerHeight,
+            0.1,
+            1000
+        );
+
+        const renderer = new THREE.WebGLRenderer();
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
+
+        const geometry = new THREE.BoxGeometry(1, 1, 1);
+        const material = new THREE.MeshBasicMaterial({ color: 0x003371 });
+        const cube = new THREE.Mesh(geometry, material);
+        scene.add(cube);
+
+        camera.position.z = 5;
+
+        function animate() {
+            requestAnimationFrame(animate);
+
+            cube.rotation.x += 0.01;
+            cube.rotation.y += 0.01;
+
+            renderer.render(scene, camera);
+        }
+
+        animate();
+    </script>
+</body>
+</html>
