--- a/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
@@ -35,14 +35,12 @@
     <title>3D Scene</title>
     <style>
         body {
-            max-width: 100vw;
-            max-height: 100vh;
-            margin: 0;
+            margin: 0px;
         }
     </style>
 </head>
 <body>
-    <script src="~/Three_js/three.js"></script>
+    <script src="~/Three_js/three.min.js"></script>
     <script>
         const scene = new THREE.Scene();
         const camera = new THREE.PerspectiveCamera(
@@ -57,7 +55,7 @@
         document.body.appendChild(renderer.domElement);
 
         const geometry = new THREE.BoxGeometry(1, 1, 1);
-        const material = new THREE.MeshBasicMaterial({ color: 0x003371 });
+        const material = new THREE.MeshBasicMaterial({ color: 0x1133d0 });
         const cube = new THREE.Mesh(geometry, material);
         scene.add(cube);
 
