--- a/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
@@ -50,12 +50,14 @@
             1000
         );
 
+        //TODO pointer lock => research
+
         const renderer = new THREE.WebGLRenderer();
         renderer.setSize(window.innerWidth, window.innerHeight);
         document.body.appendChild(renderer.domElement);
 
         const geometry = new THREE.BoxGeometry(1, 1, 1);
-        const material = new THREE.MeshBasicMaterial({ color: 0x1133d0 });
+        const material = new THREE.MeshBasicMaterial({ color: 0xff33d0 });
         const cube = new THREE.Mesh(geometry, material);
         scene.add(cube);
 
