--- a/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
@@ -57,7 +57,7 @@
         document.body.appendChild(renderer.domElement);
 
         const geometry = new THREE.BoxGeometry(1, 1, 1);
-        const material = new THREE.MeshBasicMaterial({ color: 0xff33d0 });
+        const material = new THREE.MeshBasicMaterial({ color: 0x0000ff });
         const cube = new THREE.Mesh(geometry, material);
         scene.add(cube);
 
