--- a/ASP.NET Core MVC Identity.NET6/Views/Shared/_Layout.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Shared/_Layout.cshtml
@@ -73,7 +73,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="m-2 footer text-muted">
         <div class="container">
             &copy; 2022 - ASP.NET_Core_MVC_Identity.NET6 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
