added in open weather map

--- a/ASP.NET Core MVC Identity.NET6/Views/OpenWeatherMap/GetWeather.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/OpenWeatherMap/GetWeather.cshtml
@@ -94,6 +94,7 @@
                     <div class=""><span style="font-size: 1.2rem;">Main (Group of weather parameters (Rain, Snow, Extreme etc...)):</span> @weatherItem.Main</div>
                     <div class=""><span style="font-size: 1.2rem;">Description:</span> @weatherItem.Description (Weather condition within the group. You can get the output in your language. <a href="https://openweathermap.org/current#multi">Learn more</a>)</div>
                     <div class=""><span style="font-size: 1.2rem;">Weather Icon ID:</span> @weatherItem.Icon</div>
+                    <img src="http://openweathermap.org/img/wn/" + @weatherItem.Icon + "png"/>
                 </div>
 
             }
