--- a/ASP.NET Core MVC Identity.NET6/wwwroot/css/site.css
+++ b/ASP.NET Core MVC Identity.NET6/wwwroot/css/site.css
@@ -1,18 +1,22 @@
 html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
-}
-
-html {
-  position: relative;
-  min-height: 100%;
+    font-size: 14px;
+    background-color: #181a1b;
+    color: white;
 }
 
 body {
-  margin-bottom: 60px;
+    background-color: #181a1b;
 }
+
+.grid-container {
+    display: inline-grid;
+    grid-template-columns: auto auto;
+}
+
+.grid-item {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 5px solid rgba(0, 0, 0, 0.8);
+    text-align: center;
+    margin: 10px;
+}
+
