fixed window not resizing

--- a/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
@@ -9,6 +9,28 @@
         text-align: center;
         color: white;
     }
+
+    /* width */
+    ::-webkit-scrollbar {
+        width: 20px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 5px grey;
+        border-radius: 10px;
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        background: rgb(20, 20, 20);
+        border-radius: 10px;
+    }
+
+        /* Handle on hover */
+        ::-webkit-scrollbar-thumb:hover {
+            background: rgb(3, 3, 51);
+        }
 </style>
 
 
@@ -19,70 +41,70 @@
 
 <script src="~/Three_js/three.min.js"></script>
 <script>
-    
-        //(function () {
-        //    // Scene
-        //    var scene = new THREE.Scene();
-        //    scene.background = new THREE.Color(0x2f2f2f);
 
-        //    var material_override = new THREE.MeshBasicMaterial({
-        //        color: new THREE.Color('lime'),
-        //        wireframe: true
-        //    });
-        //    scene.overrideMaterial = material_override;
+    //(function () {
+    //    // Scene
+    //    var scene = new THREE.Scene();
+    //    scene.background = new THREE.Color(0x2f2f2f);
 
-        //    // mesh1
-        //    var mesh = new THREE.Mesh(
-        //        new THREE.BoxGeometry(0.5, 0.5, 0.5),
-        //        new THREE.MeshDepthMaterial());
-        //    scene.add(mesh);
+    //    var material_override = new THREE.MeshBasicMaterial({
+    //        color: new THREE.Color('lime'),
+    //        wireframe: true
+    //    });
+    //    scene.overrideMaterial = material_override;
 
-        //    var mesh2 = new THREE.Mesh(
-        //        new THREE.BoxGeometry(0.5, 0.5, 0.5),
-        //        new THREE.MeshNormalMaterial());
-        //    mesh2.position.set(-1.5, 0, 0);
-        //    scene.add(mesh2);
+    //    // mesh1
+    //    var mesh = new THREE.Mesh(
+    //        new THREE.BoxGeometry(0.5, 0.5, 0.5),
+    //        new THREE.MeshDepthMaterial());
+    //    scene.add(mesh);
 
-        //    // Camera
-        //    var camera = new THREE.PerspectiveCamera(45, 4 / 3, 0.75, 10);
-        //    camera.position.set(1.15, 0.85, 0.75);
-        //    camera.lookAt(0, 0, 0);
-        //    var light = new THREE.PointLight(0xffffff, 1);
-        //    light.position.set(1, 1, 0);
-        //    camera.add(light)
-        //    scene.add(camera);
-        //    // Render
-        //    var renderer = new THREE.WebGLRenderer();
-        //    renderer.setSize(640, 480);
-        //    document.getElementById('demo').appendChild(renderer.domElement);
+    //    var mesh2 = new THREE.Mesh(
+    //        new THREE.BoxGeometry(0.5, 0.5, 0.5),
+    //        new THREE.MeshNormalMaterial());
+    //    mesh2.position.set(-1.5, 0, 0);
+    //    scene.add(mesh2);
 
-        //    var lt = new Date(),
-        //        time = 0,
-        //        switchTime = 1.0,
-        //        fps = 30;
-        //    var loop = function () {
-        //        var now = new Date(),
-        //            secs = (now - lt) / 1000;
-        //        requestAnimationFrame(loop);
-        //        if (secs > 1 / fps) {
-        //            time += secs;
-        //            if (time >= switchTime) {
-        //                if (scene.overrideMaterial) {
-        //                    scene.overrideMaterial = null;
-        //                } else {
-        //                    scene.overrideMaterial = material_override;
-        //                }
-        //                time %= switchTime;
-        //            }
-        //            renderer.render(scene, camera);
-        //            lt = now;
-        //        }
-        //    };
+    //    // Camera
+    //    var camera = new THREE.PerspectiveCamera(45, 4 / 3, 0.75, 10);
+    //    camera.position.set(1.15, 0.85, 0.75);
+    //    camera.lookAt(0, 0, 0);
+    //    var light = new THREE.PointLight(0xffffff, 1);
+    //    light.position.set(1, 1, 0);
+    //    camera.add(light)
+    //    scene.add(camera);
+    //    // Render
+    //    var renderer = new THREE.WebGLRenderer();
+    //    renderer.setSize(640, 480);
+    //    document.getElementById('demo').appendChild(renderer.domElement);
 
-        //    loop();
+    //    var lt = new Date(),
+    //        time = 0,
+    //        switchTime = 1.0,
+    //        fps = 30;
+    //    var loop = function () {
+    //        var now = new Date(),
+    //            secs = (now - lt) / 1000;
+    //        requestAnimationFrame(loop);
+    //        if (secs > 1 / fps) {
+    //            time += secs;
+    //            if (time >= switchTime) {
+    //                if (scene.overrideMaterial) {
+    //                    scene.overrideMaterial = null;
+    //                } else {
+    //                    scene.overrideMaterial = material_override;
+    //                }
+    //                time %= switchTime;
+    //            }
+    //            renderer.render(scene, camera);
+    //            lt = now;
+    //        }
+    //    };
 
-        //}
-        //    ());
+    //    loop();
+
+    //}
+    //    ());
     function animate() {
         requestAnimationFrame(animate);
 
@@ -93,6 +115,14 @@
         sphere.rotation.y += 0.01;
 
         renderer.render(scene, camera);
+    }
+
+    window.addEventListener('resize', onWindowResize, false)
+    function onWindowResize() {
+        camera.aspect = window.innerWidth / window.innerHeight
+        camera.updateProjectionMatrix()
+        renderer.setSize(window.innerWidth, window.innerHeight)
+        render()
     }
 
     const scene = new THREE.Scene();
@@ -115,14 +145,14 @@
     cube.position.x = -1;
     scene.add(cube);
 
-    const geo1 = new THREE.SphereGeometry(.5,10,10);
+    const geo1 = new THREE.SphereGeometry(.5, 10, 10);
     const mat1 = new THREE.MeshBasicMaterial({ color: 0xccc });
     const sphere = new THREE.Mesh(geo1, mat1);
     sphere.position.x = 1;
     scene.add(sphere);
 
 
-    
+
     camera.position.z = 5;
 
     const size = 100;
