--- a/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
+++ b/ASP.NET Core MVC Identity.NET6/Views/Home/Index.cshtml
@@ -41,70 +41,22 @@
 
 <script src="~/Three_js/three.min.js"></script>
 <script>
+    const scene = new THREE.Scene();
+    const renderer = new THREE.WebGLRenderer();
 
-    //(function () {
-    //    // Scene
-    //    var scene = new THREE.Scene();
-    //    scene.background = new THREE.Color(0x2f2f2f);
+    let width = window.innerWidth;
+    let height = window.innerHeight;
+    const camera = new THREE.PerspectiveCamera(75, width / height, 0.1, 1000 );
 
-    //    var material_override = new THREE.MeshBasicMaterial({
-    //        color: new THREE.Color('lime'),
-    //        wireframe: true
-    //    });
-    //    scene.overrideMaterial = material_override;
+    const size = 100;
+    const divisions = 50;
+    const gridHelper = new THREE.GridHelper(size, divisions);
+    
+    const geometry = new THREE.BoxGeometry(1, 1, 1);
+    const material = new THREE.MeshBasicMaterial({ color: 0x0000ff });
+    const cube = new THREE.Mesh(geometry, material);
 
-    //    // mesh1
-    //    var mesh = new THREE.Mesh(
-    //        new THREE.BoxGeometry(0.5, 0.5, 0.5),
-    //        new THREE.MeshDepthMaterial());
-    //    scene.add(mesh);
 
-    //    var mesh2 = new THREE.Mesh(
-    //        new THREE.BoxGeometry(0.5, 0.5, 0.5),
-    //        new THREE.MeshNormalMaterial());
-    //    mesh2.position.set(-1.5, 0, 0);
-    //    scene.add(mesh2);
-
-    //    // Camera
-    //    var camera = new THREE.PerspectiveCamera(45, 4 / 3, 0.75, 10);
-    //    camera.position.set(1.15, 0.85, 0.75);
-    //    camera.lookAt(0, 0, 0);
-    //    var light = new THREE.PointLight(0xffffff, 1);
-    //    light.position.set(1, 1, 0);
-    //    camera.add(light)
-    //    scene.add(camera);
-    //    // Render
-    //    var renderer = new THREE.WebGLRenderer();
-    //    renderer.setSize(640, 480);
-    //    document.getElementById('demo').appendChild(renderer.domElement);
-
-    //    var lt = new Date(),
-    //        time = 0,
-    //        switchTime = 1.0,
-    //        fps = 30;
-    //    var loop = function () {
-    //        var now = new Date(),
-    //            secs = (now - lt) / 1000;
-    //        requestAnimationFrame(loop);
-    //        if (secs > 1 / fps) {
-    //            time += secs;
-    //            if (time >= switchTime) {
-    //                if (scene.overrideMaterial) {
-    //                    scene.overrideMaterial = null;
-    //                } else {
-    //                    scene.overrideMaterial = material_override;
-    //                }
-    //                time %= switchTime;
-    //            }
-    //            renderer.render(scene, camera);
-    //            lt = now;
-    //        }
-    //    };
-
-    //    loop();
-
-    //}
-    //    ());
     function animate() {
         requestAnimationFrame(animate);
 
@@ -125,42 +77,24 @@
         render()
     }
 
-    const scene = new THREE.Scene();
-    const camera = new THREE.PerspectiveCamera(
-        75,
-        window.innerWidth / window.innerHeight,
-        0.1,
-        1000
-    );
+    for (let i = 0; i <= 10; i++) {
+        const geometry = new THREE.BoxGeometry(1, 1, 1);
+        const material = new THREE.MeshBasicMaterial({ color: 0x0000ff });
+        const cube = new THREE.Mesh(geometry, material);
+        cube.position.z = -i;
+        cube.position.x = i / i * (i - 1);
+        cube.position.y = i;
+
+        cube.rotation.x += 0.50;
+        cube.rotation.z += 0.50;
+
+        scene.add(cube);
+    }
 
 
-    //TODO pointer lock => research
-
-    const renderer = new THREE.WebGLRenderer();
     renderer.setSize(window.innerWidth - 50, window.innerHeight - 125);
     document.body.appendChild(renderer.domElement)
-
-    const geometry = new THREE.BoxGeometry(1, 1, 1);
-    const material = new THREE.MeshBasicMaterial({ color: 0x0000ff });
-    const cube = new THREE.Mesh(geometry, material);
-    cube.position.x = -1;
-    scene.add(cube);
-
-    const geo1 = new THREE.SphereGeometry(.5, 10, 10);
-    const mat1 = new THREE.MeshBasicMaterial({ color: 0xccc });
-    const sphere = new THREE.Mesh(geo1, mat1);
-    sphere.position.x = 1;
-    scene.add(sphere);
-
-
-
     camera.position.z = 5;
-
-    const size = 100;
-    const divisions = 50;
-    const gridHelper = new THREE.GridHelper(size, divisions);
-    //gridHelper.rotation.z = Math.PI / 12;
-    //gridHelper.rotation.y = Math.PI / 4;
     gridHelper.rotation.x = Math.PI / 8;
     cube.rotation.x += 0.50;
     cube.rotation.y -= 0.25;
@@ -168,8 +102,13 @@
 
     renderer.render(scene, camera)
     animate();
-
-
+    
+    /// SPHERE
+    //const geo1 = new THREE.SphereGeometry(.5, 10, 10);
+    //const mat1 = new THREE.MeshBasicMaterial({ color: 0xccc });
+    //const sphere = new THREE.Mesh(geo1, mat1);
+    //sphere.position.x = 1;
+    //scene.add(sphere);
 </script>
 
 
